@@ -26,6 +26,8 @@ Version 15.UNKNOWN (master)
 * New shortcut keys for moving the selected piece in larger steps on the
   board.
 * New menu item Recent Files/Clear List.
+* The locations and file format for the rated game history is not compatible
+  with Pentobi 15.0, the rating history will be lost.
 * New shortcut Ctrl+Shift+H, which behaves like Find Move (Ctrl+H) but
   iterates backwards through the list of legal moves.
 * The game analysis now always contains a value for the position after
